[package]
name = "vaultspec-updater"
description = "The copied external updater: replaces the release outside the active seat under the installation lock."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vaultspec-product = { path = "../vaultspec-product" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"

[lints]
workspace = true
